[package]
name = "embassy-rp-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.2.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path = "../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", path = "../embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger" }
embedded-hal = { version = "0.2.7", features = ["unproven"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.7.15"
arrayvec = { version = "0.7.4", default-features = false }
numtoa = "0.2.4"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.11" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
static_cell = "1.2.0"
embedded-sdmmc = "0.5.0"
